--- a/templates/login.html
+++ b/templates/login.html
@@ -28,7 +28,8 @@ body {
   box-sizing: border-box;
   box-shadow: 0 15px 25px rgba(0,0,0,.6);
   border-radius: 10px;
-  margin-left: 300px;
+  margin-left: 350px;
+  margin-top: 100px;
 }
 
 .login-box h2 {
@@ -177,8 +178,9 @@ body {
 }
 
 img{
-  margin-top: 100px;
+  margin-top: 40px;
   margin-left: 200px;
+  width: 43%;
 }
   </style>
 </head>
