--- a/templates/main.html
+++ b/templates/main.html
@@ -92,10 +92,10 @@
     <!-- <img src="https://www.swarnprastha.com/wp-content/uploads/2019/03/school-management-software.jpg" alt=""> -->
     <img
       src="https://aws.vedmarg.com/wp-content/uploads/2022/09/ved-blog-1.png"
-      style="width: 1200px; height: 880px;"
+      style="width: 1045px; height: 692px;"
       alt=""
     />
-    <button class="alt" style="background-color: #CC2A41; height: 60%;">
+    <button class="alt" style="background-color: #CC2A41; height: 60%; margin-left: -30px;margin-top: 165px;">
       <a href="{{ url_for('login') }}">School Management System</a>
     </button>
   </body>
