--- a/templates/login.html
+++ b/templates/login.html
@@ -29,7 +29,7 @@ body {
   box-shadow: 0 15px 25px rgba(0,0,0,.6);
   border-radius: 10px;
   margin-left: 350px;
-  margin-top: 100px;
+  /* margin-top: 100px; */
 }
 
 .login-box h2 {
