--- a/templates/register.html
+++ b/templates/register.html
@@ -252,8 +252,8 @@ form {
                
 			
 				<div class="item"><input type="text" name="UsernameId" placeholder="Username" class="input" id="UsernameId" required></div>
-                <div class="item"><input type="email" name="email" placeholder="Email" class="input" id="email" required></div>
-                <div class="item"><input type="password" name="password" placeholder="Password" class="input" id="password" required></div>
+                <div class="item"><input type="email" name="Email" placeholder="Email" class="input" id="Email" required></div>
+                <div class="item"><input type="password" name="Password" placeholder="Password" class="input" id="Password" required></div>
                 <div class="item"><input type="text" name="FirstName" placeholder="FirstName" class="input" id="FirstName" required></div>
                 <div class="item"><input type="text" name="LastName" placeholder="LastName" class="input" id="LastName" required></div>
                 <div class="item"><input type="text" name="PhoneNumber" placeholder="PhoneNumber" class="input" id="PhoneNumber" required></div>
@@ -263,7 +263,7 @@ form {
 					<input type="radio" id="Gender" class="input" name="Gender" value="male"/> Male    
 					<br>  
 					<input type="radio" id="Gender" name="Gender" class="input" value="female"/> Female <br/></div></div>
-                <div class="item"><input type="text" name="Status" placeholder="Status" class="input" id="Status" value="Admin"></div>
+                <div class="item"><input type="text" name="status" placeholder="status" class="input" id="status" value="Admin"></div>
           
                 <input type="checkbox" name="remember" id="remember"><span id="toc"> I Accept Terms and Condition</span>
                 <div class="item submit"><button type="submit"><b>Submit</b></button></div>
