--- a/templates/login.html
+++ b/templates/login.html
@@ -28,8 +28,7 @@ body {
   box-sizing: border-box;
   box-shadow: 0 15px 25px rgba(0,0,0,.6);
   border-radius: 10px;
-  margin-left: 350px;
-  /* margin-top: 100px; */
+  margin-left: 300px;
 }
 
 .login-box h2 {
@@ -192,8 +191,8 @@ img{
 			<div class="alert alert-warning" style="color: orangered;border: 1px solid white; border-radius: 15px; padding: 10px;">{{ mesage }}</div>
 		{% endif %}
       <div class="user-box">
-        <input type="text" class="form-control" id="email" name="email" required="">
-        <label for="email">Username</label>
+        <input type="text" class="form-control" id="Email" name="Email" required="">
+        <label for="Email">Username</label>
       </div>
       <div class="user-box">
         <input type="password" class="form-control" id="password" name="password" required="">
